docs: update author name to Rehan Alam across all files

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,7 +1,7 @@
 {
 	"manifest_version": 3,
 	"name": "BrowserEye",
-	"description": "A sidebar which gives you browser insights",
+	"description": "AI-powered browser automation assistant by Rehan Alam",
 	"version": "0.0.48",
 	"permissions": [
 		"sidePanel",
