feat: implement Phase 2 - Advanced Memory & Persistence
💾 PERSISTENT STORAGE SYSTEM:
- Cross-session conversation storage with Chrome storage API
- Project-based context management for organizing conversations
- Cross-tab awareness system tracking browser contexts
- Memory search and retrieval with full-text search

🏗️ ARCHITECTURE COMPONENTS:
✅ PersistentStorage: Chrome storage wrapper for conversations/projects
✅ SessionManager: Handles conversation sessions and messages
✅ ProjectManager: Organizes conversations into projects
✅ CrossTabManager: Tracks and manages contexts across tabs
✅ ConversationHistory: UI for browsing past conversations
✅ ProjectManager UI: Interface for creating/managing projects
✅ useMemorySystem: React hook for memory functionality

📊 FEATURES IMPLEMENTED:
✅ Persistent conversation storage across browser sessions
✅ Project creation and organization system
✅ Cross-tab context tracking and session association
✅ Full-text search across conversation history
✅ Session switching and management
✅ Automatic conversation titling and metadata

This completes Phase 2 with full memory persistence and
cross-session continuity for the AI assistant.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,7 +9,8 @@
 		"contextMenus",
 		"activeTab",
 		"scripting",
-		"webNavigation"
+		"webNavigation",
+		"tabs"
 	],
 	"host_permissions": [
 		"<all_urls>",
@@ -23,7 +24,7 @@
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-			"js": ["content.js"],
+			"js": ["content.js", "search-content.js"],
 			"run_at": "document_idle"
 		}
 	],
