feat: implement Phase 4 - Advanced Automation
🤖 ADVANCED AUTOMATION SYSTEM:
- Computer vision-like element detection for web automation
- Complex multi-step workflow engine with conditional logic
- Background task processing with priority queue
- Visual workflow builder with drag-and-drop interface

🏗️ ARCHITECTURE COMPONENTS:
✅ ElementDetector: Smart element detection and analysis
✅ WorkflowEngine: Multi-step automation execution engine
✅ TaskQueue: Background task processing with priorities
✅ WorkflowBuilder: Visual workflow creation interface
✅ TaskMonitor: Real-time task status monitoring
✅ AutomationContentManager: Browser automation coordination

📊 FEATURES IMPLEMENTED:
✅ Computer vision element detection with smart selectors
✅ Multi-step workflow creation and execution
✅ Background task queue with retry logic and priorities
✅ Visual workflow builder with step editing
✅ Real-time task monitoring and cancellation
✅ Element highlighting and visual feedback
✅ Conditional workflow logic and error handling

🎯 USER EXPERIENCE:
- New Automation tab in sidebar navigation
- Workflow Builder for creating custom automations
- Task Monitor for tracking background processes
- Visual element highlighting during automation
- Priority-based task execution with retry logic

🔧 AUTOMATION CAPABILITIES:
- Click elements with smart detection
- Type text with variable substitution
- Extract data from web pages
- Navigate between pages
- Wait for conditions and timeouts
- Conditional logic and error handling

This completes Phase 4 with comprehensive browser automation
capabilities rivaling dedicated automation tools.

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -24,7 +24,7 @@
 	"content_scripts": [
 		{
 			"matches": ["<all_urls>"],
-			"js": ["content.js", "search-content.js", "intelligence-content.js"],
+			"js": ["content.js", "search-content.js", "intelligence-content.js", "automation-content.js"],
 			"run_at": "document_idle"
 		}
 	],
